# DevOps-Portfolio

./: AWS-DevOps-Portfolio-Strategy.docx  README.md
project-1-iac/: .gitignore  README.md
project-1-iac/bootstrap/: main.tf  outputs.tf  variables.tf
project-1-iac/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
project-1-iac/modules/alb/: main.tf  outputs.tf  variables.tf
project-1-iac/modules/autoscaling/: main.tf  outputs.tf  variables.tf
project-1-iac/scripts/: apply-dev.sh  teardown.sh
project-2-containers/: .gitignore  README.md  docker-compose.yml
project-2-containers/app/: Dockerfile  go.mod  main.go
project-2-containers/scripts/: build-push.sh  deploy.sh  teardown.sh
project-3-gitops/: .gitignore  README.md
project-3-gitops/docs/: runbook-rollback.md
project-3-gitops/scripts/: abort.sh  bootstrap.sh  promote.sh  teardown.sh
project-4-secure-pipeline/: .gitignore  .gitleaks.toml  .trivyignore  README.md
project-4-secure-pipeline/docs/: security-controls.md
project-5-observability/: .gitignore  README.md
project-5-observability/docs/: postmortem-2026-06-28.md
project-5-observability/k8s/: servicemonitor.yaml
project-6-platform/: .gitignore  .portfolio.yaml.example  README.md
project-6-platform/backstage/: catalog-info.yaml
project-6-platform/cli/: pyproject.toml
project-6-platform/cli/portfolio/: main.py
project-6-platform/cli/portfolio/commands/: deploy.py  new_service.py  status.py  verify.py
project-6-platform/cli/portfolio/utils/: config.py  shell.py
(+73 files in other folders)
