[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "portfolio-cli"
version = "1.0.0"
description = "Golden-path CLI for the DevOps portfolio platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",       # CLI framework with type annotations
    "rich>=13.7.0",        # Terminal formatting, tables, progress bars
    "boto3>=1.34.0",       # AWS API
    "pyyaml>=6.0.1",       # .portfolio.yaml config parsing
    "requests>=2.31.0",    # HTTP for GitHub API status checks
]

[project.scripts]
portfolio = "portfolio.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[ec2,eks,ecr,s3]>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
